# careerRecommendation

./: .replit  .replit.workflow  README.md  ai_engine.py  app.py  batch_import_careers.sh  batch_import_model.py  career_app.sh  check_database.py  download_career_dataset.py  flask_app.sh  import_all_steps.sh  import_log.txt  import_model_to_db.py  import_step1_clear.py  import_step2_skills.py  import_step3_careers.py  import_step4_trends.py  kaggle_dataset_download.py  main.py  migrate_user_skills.py  models.py  process_career_dataset.py  pyproject.toml  replit.nix  replit.web.config.json  requirements.txt  requirements.txt.info  restart_app.sh  routes.py  run.sh  run_flask_app.sh  start_app.sh  test_model.py  train_and_import_kaggle_model.sh  train_and_test_model.sh  train_career_model.py  train_kaggle_model.py  train_model.py
data/: careers.csv  careers.json  market_trends.csv  market_trends.json
models/: career_recommendation_model.pkl  careers.json
static/css/: custom.css  styles.css
static/js/: chart-config.js  main.js
templates/: assessment.html  career_details.html  dashboard.html  error.html  feedback.html  index.html  layout.html  login.html  market_trends.html  profile.html  recommendations.html  register.html
templates/errors/: 404.html  500.html
