[tool.poetry]
name = "ai-career-recommendation-system"
version = "1.0.0"
description = "An AI-based career recommendation system that matches users with career paths based on skills, interests, and market trends"
authors = ["Replit AI"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12.0"
flask = "^2.3.0"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.5"
flask-wtf = "^1.1.1"
matplotlib = "^3.7.2"
nltk = "^3.8.1"
numpy = "^1.25.2"
psycopg2-binary = "^2.9.7"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
sqlalchemy = "^2.0.20"
werkzeug = "^2.3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache", ".venv", ".git", "venv", "**/__pycache__"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[nix]
channel = "stable-23_05"

[deployment]
run = ["sh", "-c", "python main.py"]
deploymentTarget = "cloudrun"